msvc build config workaround for lack of ltcg gmp

--- a/builds/msvc/vs2013/test/libbitcoin_test.props
+++ b/builds/msvc/vs2013/test/libbitcoin_test.props
@@ -45,7 +45,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(DefaultLinkage)' == 'ltcg'">
     <Linkage-mpir>static</Linkage-mpir>
-    <Linkage-secp256k1>$(DefaultLinkage)</Linkage-secp256k1>
+    <Linkage-secp256k1>static</Linkage-secp256k1>
     <Linkage-openssl>static</Linkage-openssl>
     <Linkage-libbitcoin>$(DefaultLinkage)</Linkage-libbitcoin>
   </PropertyGroup>
