--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.props
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.props
@@ -35,19 +35,19 @@
   <!-- Dependencies -->
   
   <PropertyGroup Condition="'$(DefaultLinkage)' == 'dynamic'">
-    <Linkage-mpir>$(DefaultLinkage)</Linkage-mpir>
+    <Linkage-mpir>dynamic</Linkage-mpir>
     <Linkage-secp256k1>static</Linkage-secp256k1>
-    <Linkage-openssl>$(DefaultLinkage)</Linkage-openssl>
+    <Linkage-openssl>dynamic</Linkage-openssl>
   </PropertyGroup>
   <PropertyGroup Condition="'$(DefaultLinkage)' == 'ltcg'">
     <Linkage-mpir>static</Linkage-mpir>
-    <Linkage-secp256k1>$(DefaultLinkage)</Linkage-secp256k1>
+    <Linkage-secp256k1>ltcg</Linkage-secp256k1>
     <Linkage-openssl>static</Linkage-openssl>
   </PropertyGroup>
   <PropertyGroup Condition="'$(DefaultLinkage)' == 'static'">
-    <Linkage-mpir>$(DefaultLinkage)</Linkage-mpir>
-    <Linkage-secp256k1>$(DefaultLinkage)</Linkage-secp256k1>
-    <Linkage-openssl>$(DefaultLinkage)</Linkage-openssl>
+    <Linkage-mpir>static</Linkage-mpir>
+    <Linkage-secp256k1>static</Linkage-secp256k1>
+    <Linkage-openssl>static</Linkage-openssl>
   </PropertyGroup>
 
   <!-- Messages -->
