--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -28,6 +28,7 @@ libbitcoin_la_SOURCES = \
 	transaction_pool.cpp \
 	utility/base58.cpp \
 	utility/big_number.cpp \
+	utility/hash_number.cpp \
 	utility/script_number.cpp \
 	utility/checksum.cpp \
 	utility/ec_keys.cpp \
